Display HEX, RGB, and HSL colors in color blocks Use offline fonts

--- a/src/signaal.htm
+++ b/src/signaal.htm
@@ -94,15 +94,51 @@
       </tr>
       <tr class="color-boxes">
         <td></td>
-        <td class="color-box C100"></td>
-        <td class="color-box C200"></td>
-        <td class="color-box C300"></td>
-        <td class="color-box C400"></td>
-        <td class="color-box C500"></td>
-        <td class="color-box C600"></td>
-        <td class="color-box C700"></td>
-        <td class="color-box C800"></td>
-        <td class="color-box C900"></td>
+        <td class="color-box C100">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
+        <td class="color-box C200">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
+        <td class="color-box C300">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
+        <td class="color-box C400">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
+        <td class="color-box C500">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
+        <td class="color-box C600">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
+        <td class="color-box C700">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
+        <td class="color-box C800">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
+        <td class="color-box C900">
+          <span class="hex"></span>
+          <span class="rgb"></span>
+          <span class="hsl"></span>
+        </td>
       </tr>
     </table>
   </section>
